--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_maps_flutter: ^2.7.1
   geolocator: ^11.1.0
+  flutter_polyline_points: ^2.1.0
 
 dev_dependencies:
   flutter_test:
