--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  google_maps_flutter: ^2.7.1
-  geolocator: ^11.1.0
+  google_maps_flutter: ^2.10.0
+  geolocator: ^13.0.2
   custom_info_window: ^1.0.1
+  # For OpenStreetMap
+  latlong2: ^0.9.1
+  flutter_map: ^7.0.2
+  flutter_map_location_marker: ^9.1.1
+  location: ^7.0.1
+  http: ^1.3.0
+  flutter_polyline_points: ^2.1.0
 
 dev_dependencies:
   flutter_test:
